<resources>
    <string name="app_name">PingMe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_otp">Get OTP</string>
    <string name="some_id">+91</string>
    <string name="phone_num_dummy">9876543212</string>
    <string name="enter_your_">Enter Your Phone Number</string>
    <string name="continue_">Continue</string>
    <string name="enter_the_o">Enter The OTP</string>
    <string name="otp_num">1234</string>
    <string name="timer">00:59</string>
    <string name="resend_otp">Resend OTP</string>

    //pref
    <string name="my_preference">com.devnags.pingme.USER_PREF</string>
    <string name="token">token</string>
    <string name="phone_num">phone_num</string>
    <string name="notes">NOTES</string>
    <string name="personal_me">Personal messages to you</string>
    <string name="upgrade">Upgrade</string>
    <string name="premium_mem">"Premium members can\nview all their likes at "</string>
    <string name="interested_">Interested In You</string>
    <string name="profile">Profile</string>
    <string name="auro">Beena</string>
    <string name="tap_to_revi">Tap to review 50+ notes</string>
    <string name="meena_23">"Meena, 23 "</string>

</resources>