<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/iphone_8_2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/iphone_8_2">


        <TextView
            android:id="@+id/some_id"
            android:layout_width="147dp"
            android:layout_height="22dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:gravity="top"
            android:text="@string/phone_num_dummy"
            android:textAppearance="@style/some_id"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="80dp"
            android:src="@drawable/ic_baseline_edit_24"
            app:layout_constraintStart_toEndOf="@+id/some_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/enter_the_o"
            android:layout_width="144dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="110dp"
            android:gravity="top"
            android:text="@string/enter_the_o"
            android:textAppearance="@style/enter_the_o"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="78dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="194dp"
            android:background="@drawable/round_rect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/otpTextView"
            android:layout_width="48dp"
            android:layout_height="22dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="46dp"
            android:layout_marginTop="201dp"
            android:gravity="center_horizontal|top"
            android:text="@string/otp_num"
            android:textAppearance="@style/some_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_3"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="249dp"
            android:background="@drawable/rectangle_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/continueText"
            android:layout_width="63dp"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="260dp"
            android:gravity="center_horizontal|top"
            android:text="@string/continue_"
            android:textAppearance="@style/continue_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="42dp"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="260dp"
            android:gravity="center_horizontal|top"
            android:text="@string/timer"
            android:textAppearance="@style/some_id"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/resendOtpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="248dp"
            android:layout_marginTop="260dp"
            android:visibility="gone"
            android:text="@string/resend_otp"
            android:textColor="@color/design_default_color_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>