<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PhoneVerifyFragment">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="181dp"
            android:layout_marginEnd="182dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.655" />

        <TextView
            android:id="@+id/enter_your_"
            android:layout_width="220dp"
            android:layout_height="72dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="110dp"
            android:gravity="top"
            android:text="@string/enter_your_"
            android:textAppearance="@style/enter_your_"
            android:textSize="30sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/some_id"
            android:layout_width="33dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="201dp"
            android:gravity="top"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="114dp"
            android:layout_height="22dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="119dp"
            android:layout_marginTop="201dp"
            android:gravity="center_horizontal|top"
            android:text="@string/phone_num_dummy"
            android:textAppearance="@style/some_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/continueTextView"
            android:layout_width="63dp"
            android:layout_height="17dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="260dp"
            android:gravity="center_horizontal|top"
            android:text="@string/continue_"
            android:textAppearance="@style/continue_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/get_otp"
            android:layout_width="73dp"
            android:layout_height="22dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:gravity="top"
            android:text="@string/get_otp"
            android:textAppearance="@style/get_otp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_3"
            android:layout_width="96dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="249dp"
            android:background="@drawable/rectangle_3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="147dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="103dp"
            android:layout_marginTop="194dp"
            android:background="@drawable/rectangle_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/rectangle_1"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="194dp"
            android:background="@drawable/round_rect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PrefixTextView"
            android:layout_width="33dp"
            android:layout_height="22dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="47dp"
            android:layout_marginTop="201dp"
            android:gravity="top"
            android:text="@string/some_id"
            android:textAppearance="@style/some_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/continueText"
            android:layout_width="63dp"
            android:layout_height="17dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="49dp"
            android:layout_marginTop="260dp"
            android:gravity="center_horizontal|top"
            android:text="@string/continue_"
            android:textAppearance="@style/continue_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <data></data>
</layout>